--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=bibliotecas\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=bibliotecas\\commons-io-2.4.jar
+file.reference.javax.servlet.jsp.jstl-1.2.5-b03.jar=bibliotecas\\javax.servlet.jsp.jstl-1.2.5-b03.jar
+file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar=bibliotecas\\javax.servlet.jsp.jstl-api-1.2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +42,11 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-1.2.5-b03.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
