--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.javax.servlet.jsp.jstl-1.2.5-b03.jar}:\
-    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}
+    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -54,8 +55,8 @@ javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.eclipselinkmodelgen.classpath}
-javac.source=12
-javac.target=12
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -74,7 +75,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
